--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
   <title>OneSourceITS- Photography Palatka, Florida</title>
 
+  <!-- jquery and bootstrap -->
+  <script src="node_modules/jquery/dist/jquery.js"></script>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+
   <!-- Custom fonts for this theme -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -93,6 +98,44 @@
         <div class="divider-custom-line"></div>
       </div>
 
+      <!-- carousel -->
+      
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+         <ul class="carousel-indicators">
+             <li data-target="#myCarousel" data-slide-to="0" class="active">Image One</li>
+             <li data-target="#myCarousel" data-slide-to="1">Image Two</li>
+             <li data-target="#myCarousel" data-slide-to="2">Image Three</li>
+           </ul>
+         <div class="carousel-inner">
+             <div class="carousel-item active">
+                 <img src="la.jpg" alt="Los Angeles" width="1100" height="500">
+                 <div class="carousel-caption">
+                     <h3>Los Angeles</h3>
+                     <p>We had such a great time in LA!</p>
+                   </div>  
+               </div>
+             <div class="carousel-item">
+                 <img src="chicago.jpg" alt="Chicago" width="1100" height="500">
+                 <div class="carousel-caption">
+                     <h3>Chicago</h3>
+                     <p>Thank you, Chicago!</p>
+                   </div>  
+               </div>
+             <div class="carousel-item">
+                 <img src="ny.jpg" alt="New York" width="1100" height="500">
+                 <div class="carousel-caption">
+                     <h3>New York</h3>
+                     <p>We love the Big Apple!</p>
+                   </div>  
+               </div>
+           </div>
+         <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+             <span class="carousel-control-prev-icon"></span>
+           </a>
+         <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+             <span class="carousel-control-next-icon"></span>
+           </a>
+      </div>
 
     </div>
   </section>
@@ -123,7 +166,8 @@
         </div>
         <div class="col-lg-4 mr-auto">
           <p class="lead">
-            As a customer, you have the option to choose a color theme, custom layout, and functionality.  Don't have the time, or artistic ability? Don't worry! We can take care of it.  
+            As a customer, you have the option to choose a color theme, custom layout, and functionality. Don't have the
+            time, or artistic ability? Don't worry! We can take care of it.
           </p>
         </div>
       </div>
@@ -238,7 +282,7 @@
         <div class="col-lg-4">
           <h4 class="text-uppercase mb-4">Extra Section</h4>
           <p class="lead mb-0">
-            Check our other services out at 
+            Check our other services out at
             <a href="https://onesourceits.com/pages/services.html">OneSourceITS- Services/a>.
           </p>
         </div>
