--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
   <title>OneSourceITS- Photography Palatka, Florida</title>
 
-  <!-- jquery and bootstrap -->
-  <script src="node_modules/jquery/dist/jquery.js"></script>
-  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
 
   <!-- Custom fonts for this theme -->
@@ -99,53 +99,96 @@
       </div>
 
       <!-- carousel -->
-      
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-         <ul class="carousel-indicators">
-             <li data-target="#myCarousel" data-slide-to="0" class="active">Image One</li>
-             <li data-target="#myCarousel" data-slide-to="1">Image Two</li>
-             <li data-target="#myCarousel" data-slide-to="2">Image Three</li>
-           </ul>
-         <div class="carousel-inner">
-             <div class="carousel-item active">
-                 <img src="la.jpg" alt="Los Angeles" width="1100" height="500">
-                 <div class="carousel-caption">
-                     <h3>Los Angeles</h3>
-                     <p>We had such a great time in LA!</p>
-                   </div>  
-               </div>
-             <div class="carousel-item">
-                 <img src="chicago.jpg" alt="Chicago" width="1100" height="500">
-                 <div class="carousel-caption">
-                     <h3>Chicago</h3>
-                     <p>Thank you, Chicago!</p>
-                   </div>  
-               </div>
-             <div class="carousel-item">
-                 <img src="ny.jpg" alt="New York" width="1100" height="500">
-                 <div class="carousel-caption">
-                     <h3>New York</h3>
-                     <p>We love the Big Apple!</p>
-                   </div>  
-               </div>
-           </div>
-         <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
-             <span class="carousel-control-prev-icon"></span>
-           </a>
-         <a class="carousel-control-next" href="#myCarousel" data-slide="next">
-             <span class="carousel-control-next-icon"></span>
-           </a>
-      </div>
+      <div class="row">
+        <div class="col-lg-10 text-center mx-auto">
+          <div class="carousel slide" id="myCarousel" data-ride="carousel">
+            <ul class="carousel-indicators">
+              <li data-target="#myCarousel" data-slide-to="0" class="active">Image 1</li>
+              <li data-target="#myCarousel" data-slide-to="1">Image 2</li>
+              <li data-target="#myCarousel" data-slide-to="2">Image 3</li>
+            </ul>
 
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="" alt="" width="1100" height="500">
+                <div class="carousel-caption">
+                  <h3></h3>
+                  <p>
+                    Description of image1
+                  </p>
+                </div>  
+              </div>
+              <div class="carousel-item">
+                <img src="" alt="" width="1100" height="500">
+                <div class="carousel-caption">
+                  <h3></h3>
+                  <p>
+                    Description of image2
+                  </p>
+                </div>  
+              </div>
+              <div class="carousel-item">
+                <img src="" alt="" width="1100" height="500">
+                <div class="carousel-caption">
+                  <h3></h3>
+                  <p>
+                    Description of image3
+                  </p>
+                </div>  
+              </div>
+
+              <div class="carousel-item">
+                <img src="" alt="" width="1100" height="500">
+                <div class="carousel-caption">
+                  <h3></h3>
+                  <p>
+                    Description of image4
+                  </p>
+                </div>  
+              </div>
+
+              <div class="carousel-item">
+                <img src="" alt="" width="1100" height="500">
+                <div class="carousel-caption">
+                  <h3></h3>
+                  <p>
+                    Description of image5
+                  </p>
+                </div>  
+              </div>
+
+              <div class="carousel-item">
+                <img src="" alt="" width="1100" height="500">
+                <div class="carousel-caption">
+                  <h3></h3>
+                  <p>
+                    Description of image6
+                  </p>
+                </div>  
+              </div>
+
+              <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+                <span class="sr-only">Previous image</span>
+              </a>
+              <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+                <span class="sr-only">Next image</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
-  <!-- About Section -->
+
   <section class="page-section bg-primary text-white mb-0" id="about">
     <div class="container">
 
       <!-- About Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-white">About OneSourceITS Website Service</h2>
+      <h2 class="page-section-heading text-center text-uppercase text-white">About OneSourceITS Website
+        Service</h2>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
@@ -160,13 +203,16 @@
       <div class="row">
         <div class="col-lg-4 ml-auto">
           <p class="lead">
-            Hi, my name is Keith. I am the Web Master at OneSource IT Solutions LLC. I have build this single page
-            Photography site, in order to show a small example of what we can do for you here at OneSource IT Solutions.
+            Hi, my name is Keith. I am the Web Master at OneSource IT Solutions LLC. I have build this single
+            page
+            Photography site, in order to show a small example of what we can do for you here at OneSource IT
+            Solutions.
           </p>
         </div>
         <div class="col-lg-4 mr-auto">
           <p class="lead">
-            As a customer, you have the option to choose a color theme, custom layout, and functionality. Don't have the
+            As a customer, you have the option to choose a color theme, custom layout, and functionality.
+            Don't have the
             time, or artistic ability? Don't worry! We can take care of it.
           </p>
         </div>
@@ -305,9 +351,7 @@
     </a>
   </div>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
 
   <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
