finish adding services

--- a/index.html
+++ b/index.html
@@ -229,6 +229,62 @@
     </div>
   </section>
 
+  <section class="page-section bg-primary text-white mb-0" id="services">
+    <div class="container">
+
+      <!-- services Section Heading -->
+      <h2 class="page-section-heading text-center text-uppercase text-white">
+        Services we offer
+      </h2>
+
+      <!-- Icon Divider -->
+      <div class="divider-custom divider-light">
+        <div class="divider-custom-line"></div>
+        <div class="divider-custom-icon">
+          <i class="fas fa-star"></i>
+        </div>
+        <div class="divider-custom-line"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-4 ml-auto">
+          <h3 class="text-center">Service 1</h3>
+          <p>
+            This is where the service information will go.
+          </p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-4 ml-auto">
+          <h3 class="text-center">Service 2</h3>
+          <p>
+            This is where the service information will go for service 2.
+          </p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-4 ml-auto">
+          <h3 class="text-center">Service 3</h3>
+          <p>
+            This is where the information for service 3 will go.
+          </p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-4 ml-auto">
+          <h3 class="text-center">Service 4</h3>
+          <p>
+            This is where the information for service four will go.
+          </p>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
   <!-- Contact Section -->
   <section class="page-section" id="contact">
     <div class="container">
@@ -329,7 +385,7 @@
           <h4 class="text-uppercase mb-4">Extra Section</h4>
           <p class="lead mb-0">
             Check our other services out at
-            <a href="https://onesourceits.com/pages/services.html">OneSourceITS- Services/a>.
+            <a href="https://onesourceits.com/pages/services.html">OneSourceITS- Services</a>
           </p>
         </div>
 
