--- a/index.html
+++ b/index.html
@@ -103,66 +103,69 @@
         <div class="col-lg-10 text-center mx-auto">
           <div class="carousel slide" id="myCarousel" data-ride="carousel">
             <ul class="carousel-indicators">
-              <li data-target="#myCarousel" data-slide-to="0" class="active">Image 1</li>
-              <li data-target="#myCarousel" data-slide-to="1">Image 2</li>
-              <li data-target="#myCarousel" data-slide-to="2">Image 3</li>
+              <li data-target="#myCarousel" data-slide-to="0" class="active">Pug</li>
+              <li data-target="#myCarousel" data-slide-to="1">Beagle</li>
+              <li data-target="#myCarousel" data-slide-to="2">Manatee</li>
+              <li data-target="#myCarousel" data-slide-to="2">Butterfly</li>
+              <li data-target="#myCarousel" data-slide-to="2">Water Lily</li>
+              <li data-target="#myCarousel" data-slide-to="2">Spring Time</li>
             </ul>
 
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="" alt="" width="1100" height="500">
+                <img src="img/pug-690566_1280.jpg" class="img-fluid" alt="pug puppies" width="1100" height="500">
                 <div class="carousel-caption">
-                  <h3></h3>
+                  <Pug></Pug Puppiesh3>
                   <p>
-                    Description of image1
+                    Pug puppies have no worries!
                   </p>
                 </div>  
               </div>
               <div class="carousel-item">
-                <img src="" alt="" width="1100" height="500">
+                <img src="img/beagle-puppy-2681.jpg" class="img-fluid" alt="Beagle puppies" width="1100" height="500">
                 <div class="carousel-caption">
-                  <h3></h3>
+                  <h3>Beagle Puppies</h3>
                   <p>
-                    Description of image2
+                    Beagle puppies are nothing but ears!
                   </p>
                 </div>  
               </div>
               <div class="carousel-item">
-                <img src="" alt="" width="1100" height="500">
+                <img src="img/manatee-387193_1280.jpg" class="img-fluid" alt="Manatees swimming" width="1100" height="500">
                 <div class="carousel-caption">
-                  <h3></h3>
+                  <h3>Manatees</h3>
                   <p>
-                    Description of image3
-                  </p>
-                </div>  
-              </div>
-
-              <div class="carousel-item">
-                <img src="" alt="" width="1100" height="500">
-                <div class="carousel-caption">
-                  <h3></h3>
-                  <p>
-                    Description of image4
+                    No manatee would not hurt a fly!
                   </p>
                 </div>  
               </div>
 
               <div class="carousel-item">
-                <img src="" alt="" width="1100" height="500">
+                <img src="img/butterfly-1127666_1280.jpg" class="img-fluid" alt="Butterfly" width="1100" height="500">
                 <div class="carousel-caption">
-                  <h3></h3>
+                  <h3>Butterfly</h3>
                   <p>
-                    Description of image5
+                    Butterfly flying so gracefully.
                   </p>
                 </div>  
               </div>
 
               <div class="carousel-item">
-                <img src="" alt="" width="1100" height="500">
+                <img src="img/water-lily-1510707_1280.jpg" class="img-fluid" alt="Water lilly pink" width="1100" height="500">
                 <div class="carousel-caption">
-                  <h3></h3>
+                  <h3>Water Lily</h3>
                   <p>
-                    Description of image6
+                    could not be more beautiful.
+                  </p>
+                </div>  
+              </div>
+
+              <div class="carousel-item">
+                <img src="img/spring-276014_1280.jpg" class="img-fluid" alt="Spring Time" width="1100" height="500">
+                <div class="carousel-caption">
+                  <h3>Spring time</h3>
+                  <p>
+                    Nothing like spring time!
                   </p>
                 </div>  
               </div>
@@ -247,34 +250,28 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-4 ml-auto">
+        <div class="col-lg-4" style="border: 1px dotted #ffc107;">
           <h3 class="text-center">Service 1</h3>
           <p>
             This is where the service information will go.
           </p>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="col-lg-4 ml-auto">
+        <div class="col-lg-4" style="border: 1px dotted #ffc107;">
           <h3 class="text-center">Service 2</h3>
           <p>
             This is where the service information will go for service 2.
           </p>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="col-lg-4 ml-auto">
+        <div class="col-lg-4" style="border: 1px dotted #ffc107;">
           <h3 class="text-center">Service 3</h3>
           <p>
             This is where the information for service 3 will go.
           </p>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="col-lg-4 ml-auto">
+        <div class="col-lg-4" style="border: 1px dotted #ffc107;">
           <h3 class="text-center">Service 4</h3>
           <p>
             This is where the information for service four will go.
