--- a/index.html
+++ b/index.html
@@ -108,21 +108,21 @@
               <li data-target="#myCarousel" data-slide-to="2">Manatee</li>
               <li data-target="#myCarousel" data-slide-to="2">Butterfly</li>
               <li data-target="#myCarousel" data-slide-to="2">Water Lily</li>
-              <li data-target="#myCarousel" data-slide-to="2">Spring Time</li>
+              <li data-target="#myCarousel" data-slide-to="2">Spring Time"carous</li>
             </ul>
 
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/pug-690566_1280.jpg" class="img-fluid" alt="pug puppies" width="1100" height="500">
+                <img src="img/pug-690566_1280.jpg" class="img-fluid" alt="pug puppies" width="1100" height="500" />
                 <div class="carousel-caption">
-                  <Pug></Pug Puppiesh3>
+                  <h3> Pug Puppies </h3>
                   <p>
                     Pug puppies have no worries!
                   </p>
                 </div>  
               </div>
               <div class="carousel-item">
-                <img src="img/beagle-puppy-2681.jpg" class="img-fluid" alt="Beagle puppies" width="1100" height="500">
+                <img src="img/beagle-puppy-2681.jpg" class="img-fluid" alt="Beagle puppies" width="1100" height="500"/>
                 <div class="carousel-caption">
                   <h3>Beagle Puppies</h3>
                   <p>
@@ -131,7 +131,8 @@
                 </div>  
               </div>
               <div class="carousel-item">
-                <img src="img/manatee-387193_1280.jpg" class="img-fluid" alt="Manatees swimming" width="1100" height="500">
+                <img src="img/manatee-387193_1280.jpg" class="img-fluid" alt="Manatees swimming" width="1100"
+                  height="500"/>
                 <div class="carousel-caption">
                   <h3>Manatees</h3>
                   <p>
@@ -141,7 +142,7 @@
               </div>
 
               <div class="carousel-item">
-                <img src="img/butterfly-1127666_1280.jpg" class="img-fluid" alt="Butterfly" width="1100" height="500">
+                <img src="img/butterfly-1127666_1280.jpg" class="img-fluid" alt="Butterfly" width="1100" height="500"/>
                 <div class="carousel-caption">
                   <h3>Butterfly</h3>
                   <p>
@@ -151,7 +152,8 @@
               </div>
 
               <div class="carousel-item">
-                <img src="img/water-lily-1510707_1280.jpg" class="img-fluid" alt="Water lilly pink" width="1100" height="500">
+                <img src="img/water-lily-1510707_1280.jpg" class="img-fluid" alt="Water lilly pink" width="1100"
+                  height="500"/>
                 <div class="carousel-caption">
                   <h3>Water Lily</h3>
                   <p>
@@ -161,7 +163,7 @@
               </div>
 
               <div class="carousel-item">
-                <img src="img/spring-276014_1280.jpg" class="img-fluid" alt="Spring Time" width="1100" height="500">
+                <img src="img/spring-276014_1280.jpg" class="img-fluid" alt="Spring Time" width="1100" height="500"/>
                 <div class="carousel-caption">
                   <h3>Spring time</h3>
                   <p>
