--- a/index.html
+++ b/index.html
@@ -102,14 +102,6 @@
       <div class="row">
         <div class="col-lg-10 text-center mx-auto">
           <div class="carousel slide" id="myCarousel" data-ride="carousel">
-            <ul class="carousel-indicators">
-              <li data-target="#myCarousel" data-slide-to="0" class="active">Pug</li>
-              <li data-target="#myCarousel" data-slide-to="1">Beagle</li>
-              <li data-target="#myCarousel" data-slide-to="2">Manatee</li>
-              <li data-target="#myCarousel" data-slide-to="2">Butterfly</li>
-              <li data-target="#myCarousel" data-slide-to="2">Water Lily</li>
-              <li data-target="#myCarousel" data-slide-to="2">Spring Time"carous</li>
-            </ul>
 
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -122,7 +114,7 @@
                 </div>  
               </div>
               <div class="carousel-item">
-                <img src="img/beagle-puppy-2681.jpg" class="img-fluid" alt="Beagle puppies" width="1100" height="500"/>
+                <img src="img/beagle-puppy-2681.jpg" class="img-fluid" alt="Beagle puppies" width="1100" height="500" />
                 <div class="carousel-caption">
                   <h3>Beagle Puppies</h3>
                   <p>
@@ -132,7 +124,7 @@
               </div>
               <div class="carousel-item">
                 <img src="img/manatee-387193_1280.jpg" class="img-fluid" alt="Manatees swimming" width="1100"
-                  height="500"/>
+                  height="500" />
                 <div class="carousel-caption">
                   <h3>Manatees</h3>
                   <p>
@@ -142,7 +134,7 @@
               </div>
 
               <div class="carousel-item">
-                <img src="img/butterfly-1127666_1280.jpg" class="img-fluid" alt="Butterfly" width="1100" height="500"/>
+                <img src="img/butterfly-1127666_1280.jpg" class="img-fluid" alt="Butterfly" width="1100" height="500" />
                 <div class="carousel-caption">
                   <h3>Butterfly</h3>
                   <p>
@@ -153,7 +145,7 @@
 
               <div class="carousel-item">
                 <img src="img/water-lily-1510707_1280.jpg" class="img-fluid" alt="Water lilly pink" width="1100"
-                  height="500"/>
+                  height="500" />
                 <div class="carousel-caption">
                   <h3>Water Lily</h3>
                   <p>
@@ -163,7 +155,7 @@
               </div>
 
               <div class="carousel-item">
-                <img src="img/spring-276014_1280.jpg" class="img-fluid" alt="Spring Time" width="1100" height="500"/>
+                <img src="img/spring-276014_1280.jpg" class="img-fluid" alt="Spring Time" width="1100" height="500" />
                 <div class="carousel-caption">
                   <h3>Spring time</h3>
                   <p>
@@ -394,7 +386,7 @@
 
   <!-- Copyright Section -->
   <section class="copyright py-4 text-center text-white">
-    <div class="container">
+    <div class="container" role="heading">
       <small>Copyright &copy; OneSourceITS- Photography Example Site</small>
     </div>
   </section>
